fix: function getAuthorities